Prevent toolbar title overflow

--- a/client/src/app/components/common/toolbar/toolbar.component.css
+++ b/client/src/app/components/common/toolbar/toolbar.component.css
@@ -5,6 +5,10 @@ mat-toolbar {
   z-index: 1000;
 }
 
+mat-toolbar span {
+  overflow: hidden;
+}
+
 .toolbar-spacer {
   flex: 1 1 auto;
 }
